--- a/polaire/angular/src/app/worker/worker.component.html
+++ b/polaire/angular/src/app/worker/worker.component.html
@@ -1,7 +1,7 @@
 <div class="card text-white bg-secondary mb-3" id="company">
    <div class="card-header">Your Contact Person</div>
    <div class="card-body">
-     <h4 class="card-title">{{ worker.title }} {{ worker.firstname }} {{ worker.lastname }} </h4>
+     <h4 class="card-title">{{ worker.title_first }} {{ worker.first_name }} {{ worker.last_name }} </h4>
      <p class="card-text"> <b class="bold">Phone </b> {{ worker.phone }}</p>
      <p class="card-text"> <b class="bold">Mail </b> {{ worker.mail }}</p>
    </div>
