--- a/polaire/angular/src/app/company/company.component.html
+++ b/polaire/angular/src/app/company/company.component.html
@@ -1,5 +1,5 @@
 <div class="card" style="width: 12rem;" id="companyField" >
-    <img class="card-img-top" src="{{company.profilPicURL}}" alt="Card image cap">
+    <img class="card-img-top" src="{{company.logo}}" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">{{ company.name }}</h5>
       <p> <b class="bold">Phone</b> {{ company.phone }}</p>
