--- a/polaire/angular/src/app/filterbar/filterbar.component.html
+++ b/polaire/angular/src/app/filterbar/filterbar.component.html
@@ -3,7 +3,7 @@
         <div class="card-header" id="headingTwo">
             <h5 class="mb-0" id="underHeader">
                 <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Show filters
+                    Show filters test
                 </button>
             </h5>
         </div>
@@ -14,16 +14,13 @@
                       Country
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                      <a class="dropdown-item" *ngFor="let country of countryList" (click)="addCountryFilter(country)"> {{ country }} </a>
+                      <a class="dropdown-item" *ngFor="let country of countryList" > {{ country }} </a>
                     </div>
                 </div>
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       City
                     </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                      <a class="dropdown-item" *ngFor="let city of cityList" (click)="addCityFilter(city)">{{ city.name }}</a>
-                    </div>
                 </div>
             </div>
         </div>
@@ -33,7 +30,7 @@
             <span *ngIf="filter.type != city; then noCity else City"></span>
             <ng-template #noCity>{{ filter.value }} </ng-template>
             <ng-template #City>{{ filter.value.name }} </ng-template>
-            <button type="button" class="btn btn-outline-danger" id="smallbutton" (click)="removeFilter(filter)">X</button>
+            <button type="button" class="btn btn-outline-danger" id="smallbutton">X</button>
         </li>
     </ol>
 </div>
