Anfang für From zum Erstellen von neuen Firmen

--- a/polaire/angular/src/app/listCompanies/listCompanies.component.html
+++ b/polaire/angular/src/app/listCompanies/listCompanies.component.html
@@ -6,4 +6,5 @@
             </app-company>
         </li>
     </ol>
+    <a [routerLink]="['/newaccount']" class="btn btn-primary">Create new Company</a>
 </div>   
