--- a/polaire/angular/src/app/app.component.css
+++ b/polaire/angular/src/app/app.component.css
@@ -1,3 +1,13 @@
 nb-layout-footer{
     width:100%;
 }
+
+app-header{
+    position: fixed;
+    width: 100%;
+    z-index: 10;
+}
+
+router-outlet{
+    margin-top: 70px;
+}
