--- a/polaire/angular/src/app/detailed-information/detailed-information.component.html
+++ b/polaire/angular/src/app/detailed-information/detailed-information.component.html
@@ -1,12 +1,29 @@
 <div id="body">
     <div *ngIf="company != null">
-        <h1 id="topper">{{ company.name }}</h1>
+        
+        <h1 id="topper"><img id="logo" src="{{company.logo}}" alt="Card image cap">{{ company.name }}</h1>
+
         <ol id="firstInfo">
             <li>
+
+                <div class="card text-white bg-secondary mb-3" id="company">
+                    <div class="card-header">Company</div>
+                    <div class="card-body">
+                        <h4 class="card-title">{{ company.business }}</h4>
+                        <p class="card-text"> <b class="bold">Phone </b> {{ company.phone }}</p>
+                        <p class="card-text"> <b class="bold">Mail </b> {{ company.mail }}</p>
+                    </div>
+                </div>
+
                 <app-worker [worker]="company.worker" class="inlineblock"></app-worker>
+                <!--   modules coming in future version
                 <app-textmodule [module]="company.modules[0]" class="inlineblock"></app-textmodule>
+            -->
+
             </li>
         </ol>
+        
+        <!--         modules coming in future version
         <ol *ngFor="let module of company.modules" id="furtherInformation">
             <div *ngIf="module != company.modules[0]">
                 <li *ngIf="module.type == 'gallery'" class="notinlineblock"><app-gallerymodule [module]="module"></app-gallerymodule></li>
@@ -14,7 +31,7 @@
                 <li *ngIf="module.type == 'social'" class="notinlineblock"><app-socialmediamodule [module]="module"></app-socialmediamodule></li>
                 <li *ngIf="module.type == 'collage'" class="notinlineblock"><app-collagemodule [content]="module.content"></app-collagemodule></li>
             </div>
-        </ol>
+        </ol>-->
     </div>
     <div *ngIf="company == null">
         <p id="margin"></p>
