--- a/polaire/angular/src/app/listCompanies/listCompanies.component.html
+++ b/polaire/angular/src/app/listCompanies/listCompanies.component.html
@@ -7,4 +7,5 @@
         </li>
     </ol>
     <a [routerLink]="['/newaccount']" class="btn btn-primary">Create new Company</a>
+    <a [routerLink]="['/login']" class="btn btn-primary">Login</a>
 </div>   
