--- a/polaire/angular/src/app/login/login.component.html
+++ b/polaire/angular/src/app/login/login.component.html
@@ -1,7 +1,21 @@
-<div id="login">
-    <ol>
-        <li><input type="text" id="username"></li>
-        <li><input type="password" id="password"></li>
-        <li><button (click)="login()">log in</button></li>  
-    </ol>
+<div class="card border-primary mb-3" style="max-width: 20rem;" id="loginComponent">
+
+    <div class="card-header" id="loginHeader">Login</div>
+    <div class="card-body">
+
+        <h4 class="card-title" id="loginInformation">Please enter your username and password</h4>
+
+        <div class="form-group">
+            <label for="exampleInputEmail1" class="form-label mt-4">Username</label>
+            <input type="username" class="form-control" id="username" aria-describedby="username" placeholder="Username">
+        </div>
+
+        <div class="form-group">
+            <label for="exampleInputPassword1" class="form-label mt-4">Password</label>
+            <input type="password" class="form-control" id="password" placeholder="Password">
+        </div>
+        
+        <button type="submit" class="btn btn-primary" (click)="login()" id="submitbuttonlogin">Login</button>
+
+    </div>
 </div>
