--- a/polaire/angular/src/app/login/login.component.scss
+++ b/polaire/angular/src/app/login/login.component.scss
@@ -4,10 +4,14 @@
 
 
 #loginComponent{
-    width: 350px;
+    width: 400px;
+    margin-top: 80px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #submitbuttonlogin{
     margin: 20px;
-    margin-left: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
