--- a/polaire/angular/src/app/header/header.component.scss
+++ b/polaire/angular/src/app/header/header.component.scss
@@ -11,9 +11,9 @@ img{
     background-color: rgb(231, 231, 231);
     width: 100%;
     height: 70px;
-    z-index: 1;
-    border-bottom: 1px rgb(114, 112, 112) solid;
     z-index: 2;
+    border-bottom: 1px rgb(114, 112, 112) solid;
+    margin: 0;
 }
 
 
