--- a/polaire/angular/src/app/login/login.component.scss
+++ b/polaire/angular/src/app/login/login.component.scss
@@ -5,13 +5,12 @@
 
 #loginComponent{
     width: 400px;
-    margin-top: 80px;
     margin-left: auto;
     margin-right: auto;
+    top: 80px;
+    margin-bottom: 100px !important;
 }
 
 #submitbuttonlogin{
     margin: 20px;
-    margin-left: auto;
-    margin-right: auto;
 }
