--- a/polaire/angular/src/app/header/header.component.html
+++ b/polaire/angular/src/app/header/header.component.html
@@ -2,5 +2,10 @@
     <a href="/#top" class="headelement">
         <img src="../../assets/Polaire.png" alt="Logo" height="50px" widht="50px">
     </a>
+    <div id="LogInOut">
+        <a href="/login" class="headelement">Login</a>
+        <p class="headelement">|</p>
+        <a href="" class="headelement">Logout</a>
+    </div>
     <a href="" id="profils" class="headelement">Profiles</a>
 </div>
