--- a/polaire/angular/src/app/listCompanies/listCompanies.component.html
+++ b/polaire/angular/src/app/listCompanies/listCompanies.component.html
@@ -6,6 +6,5 @@
             </app-company>
         </li>
     </ol>
-    <a [routerLink]="['/newaccount']" class="btn btn-primary">Create new Company</a>
-    <a [routerLink]="['/login']" class="btn btn-primary">Login</a>
+    <a [routerLink]="['/newaccount']" class="btn btn-primary" id="newCompany">Create new Company</a>
 </div>   
