--- a/polaire/angular/src/app/listCompanies/listCompanies.component.scss
+++ b/polaire/angular/src/app/listCompanies/listCompanies.component.scss
@@ -8,6 +8,11 @@
     width: 100%;
 }
 
+#newCompany{
+    margin-left: auto;
+    margin-right: auto;
+}
+
 li{
     list-style-type: none;
     display: inline-block;
