detailed Info design

--- a/polaire/angular/src/app/detailed-information/detailed-information.component.html
+++ b/polaire/angular/src/app/detailed-information/detailed-information.component.html
@@ -7,7 +7,7 @@
             <li>
 
                 <div class="card text-white bg-secondary mb-3" id="company">
-                    <div class="card-header">Company</div>
+                    <div class="card-header" id="companyHeader">Company</div>
                     <div class="card-body">
                         <h4 class="card-title">{{ company.business }}</h4>
                         <p class="card-text"> <b class="bold">Phone </b> {{ company.phone }}</p>
