--- a/polaire/angular/src/app/header/header.component.html
+++ b/polaire/angular/src/app/header/header.component.html
@@ -3,9 +3,9 @@
         <img src="../../assets/Polaire.png" alt="Logo" height="50px" widht="50px">
     </a>
     <div id="LogInOut">
-        <a href="/login" class="headelement">Login</a>
-        <p class="headelement">|</p>
-        <a href="" class="headelement">Logout</a>
+        <a class="headelement" (click)="logIn()" id="login">Login</a>
+        <p class="headelement" id="seperator">|</p>
+        <a class="headelement" (click)="logOut()" id="logout">Logout</a>
     </div>
     <a href="" id="profils" class="headelement">Profiles</a>
 </div>
