--- a/polaire/angular/src/app/worker/worker.component.html
+++ b/polaire/angular/src/app/worker/worker.component.html
@@ -1,8 +1,11 @@
 <div class="card text-white bg-secondary mb-3" id="company">
    <div class="card-header">Your Contact Person</div>
-   <div class="card-body">
+   <div class="card-body" id="workerInfo">
      <h4 class="card-title">{{ worker.title_first }} {{ worker.first_name }} {{ worker.last_name }} </h4>
      <p class="card-text"> <b class="bold">Phone </b> {{ worker.phone }}</p>
      <p class="card-text"> <b class="bold">Mail </b> {{ worker.mail }}</p>
+   </div>
+   <div id="picContainer">
+     <img src="{{ worker.picture }}" alt="picture" id="pic">
    </div>
 </div>
