--- a/polaire/angular/src/app/header/header.component.html
+++ b/polaire/angular/src/app/header/header.component.html
@@ -2,10 +2,10 @@
     <a href="/#top" class="headelement">
         <img src="../../assets/Polaire.png" alt="Logo" height="50px" widht="50px">
     </a>
-    <div id="LogInOut">
-        <a class="headelement" (click)="logIn()" id="login">Login</a>
-        <p class="headelement" id="seperator">|</p>
-        <a class="headelement" (click)="logOut()" id="logout">Logout</a>
-    </div>
-    <a href="" id="profils" class="headelement">Profiles</a>
+
+    <a href="" class="headelement" id="profils">Profiles</a>
+
+    <a href="" class="headelement" (click)="logIn()" id="login" >Login</a>
+
+    <a href="" class="headelement" (click)="logOut()" id="logout">Logout</a>
 </div>
