--- a/polaire/angular/src/styles.scss
+++ b/polaire/angular/src/styles.scss
@@ -1,3 +1,6 @@
+$theme-colors: (
+  primary: black
+);
 @import "~bootswatch/dist/minty/variables";
 @import "~bootstrap/scss/bootstrap";
 @import "~bootswatch/dist/minty/bootswatch";
