--- a/polaire/angular/src/app/header/header.component.scss
+++ b/polaire/angular/src/app/header/header.component.scss
@@ -24,21 +24,15 @@ img{
 }
 
 #login{
-    margin:0;
-    padding:0;
-    display:inline;
-}
-
-#seperator{
-    width:10px;
-    display:inline;
-    color:$primary;
+    float: right;
+    color: rgb(114, 112, 112);
+    text-decoration: none;
 }
 
 #logout{
-    margin:0;
-    padding:0;
-    display: inline;
+    float: right;
+    color: rgb(114, 112, 112);
+    text-decoration: none;
 }
 
 #profils{
