--- a/polaire/angular/src/app/detailed-information/detailed-information.component.html
+++ b/polaire/angular/src/app/detailed-information/detailed-information.component.html
@@ -18,7 +18,7 @@
                 <app-worker [worker]="company.worker" class="inlineblock"></app-worker>
             </li>
         </ol>
-        <ol>
+        <ol id="furtherInfo">
             <li *ngFor="let module of modules">
 
                 <div *ngIf="module.type == 'text'">
