--- a/polaire/angular/src/app/socialmediamodule/socialmediamodule.component.scss
+++ b/polaire/angular/src/app/socialmediamodule/socialmediamodule.component.scss
@@ -11,11 +11,11 @@ li{
 }
 
 i{
-    color: grey;
+    color: rgb(172, 170, 170);
     font-size: 25px;
 }
 
 button{
-    border-color: grey;
+    border-color: rgb(172, 170, 170);
     margin: 10px;
 }
