--- a/polaire/angular/src/app/textmodule/textmodule.component.html
+++ b/polaire/angular/src/app/textmodule/textmodule.component.html
@@ -1,4 +1,4 @@
-<div class="card text-white bg-primary mb-3" style="max-width: 20rem;" id="textfield">
+<div class="card text-white bg-secundary mb-3" style="max-width: 20rem;" id="textfield">
     <div class="card-header">Company Profile</div>
     <div class="card-body">
       <p class="card-text">{{ content.text }}</p>
