--- a/polaire/angular/src/app/header/header.component.html
+++ b/polaire/angular/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div id="header">
     <a href="/#top" class="headelement">
-        <img src="../../assets/Polaire.png" alt="Logo" height="50px" widht="50px">
+        <img src="/static/assets/Polaire.png" alt="Logo" height="50px" widht="50px">
     </a>
 
     <a href="" class="headelement" id="profils">Profiles</a>
