--- a/polaire/angular/src/app/create-company/create-company.component.html
+++ b/polaire/angular/src/app/create-company/create-company.component.html
@@ -12,7 +12,7 @@
       <div class="form-group">
         <label for="exampleInputEmail1" class="form-label mt-4">Email address</label>
         <input type="mail" class="form-control" id="mail"  placeholder="Enter email">
-        <small id="mailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <small id="mailHelp" class="form-text text-muted">We'lll never share your email with anyone else.</small>
       </div>
       <div class="form-group">
         <label for="companyType" class="form-label mt-4">Company Type</label>
