kein worker be creation

--- a/polaire/angular/src/app/create-company/create-company.component.html
+++ b/polaire/angular/src/app/create-company/create-company.component.html
@@ -47,6 +47,7 @@
         <input type="country" class="form-control" id="country" placeholder="Country">
       </div>
 
+      <!--
       <div class="form-group">
         <label for="worker" class="form-label mt-4">Worker</label>
         <input type="titleFirst" class="form-control" id="titleFirst" placeholder="First Title">
@@ -63,6 +64,6 @@
         <input type="phoneWorker" class="form-control" id="phoneWorker" placeholder="Worker's Phone number">
         <input type="mailWorker" class="form-control" id="mailWorker" placeholder="Worker's mail address">
       </div>
-      <a class="btn btn-primary" (click)="submit()">submit</a>
+      <a class="btn btn-primary" (click)="submit()">submit</a>-->
     </fieldset>
   </form>
