--- a/angular/src/app/create-company/create-company.component.scss
+++ b/angular/src/app/create-company/create-company.component.scss
@@ -9,3 +9,23 @@
 legend{
     padding-top: 70px;
 }
+
+.form-control{
+    margin-top:5px;
+    margin-bottom: 5px;
+    max-width: 600px;
+}
+
+.form-select{
+    margin-top:5px;
+    margin-bottom: 5px;
+    max-width: 600px;
+}
+
+#accountImg{
+    position: fixed;
+    height: 200px;
+    margin-right: auto;
+    margin-left: 61.8%;
+    height:100%;
+}
