--- a/angular/src/app/detailed-information/detailed-information.component.scss
+++ b/angular/src/app/detailed-information/detailed-information.component.scss
@@ -1,3 +1,4 @@
+$secondary:#cbece1;
 @import "~bootswatch/dist/minty/variables";
 @import "~bootstrap/scss/bootstrap";
 @import "~bootswatch/dist/minty/bootswatch";
