--- a/angular/src/app/create-company/create-company.component.scss
+++ b/angular/src/app/create-company/create-company.component.scss
@@ -10,13 +10,14 @@ legend{
     padding-top: 70px;
 }
 
-.form-control{
+.formFields{
     margin-top:5px;
     margin-bottom: 5px;
     max-width: 600px;
+    height:70px;
 }
 
-.form-select{
+.nestedFormFields{
     margin-top:5px;
     margin-bottom: 5px;
     max-width: 600px;
