--- a/angular/src/app/formvalue/formvalue.component.scss
+++ b/angular/src/app/formvalue/formvalue.component.scss
@@ -1,3 +1,11 @@
 @import "~bootswatch/dist/minty/variables";
 @import "~bootstrap/scss/bootstrap";
 @import "~bootswatch/dist/minty/bootswatch";
+
+.formValues{
+    height:70px;
+}
+
+.form-group{
+    width:100%;
+}
