--- a/angular/src/app/create-company/create-company.component.scss
+++ b/angular/src/app/create-company/create-company.component.scss
@@ -2,25 +2,21 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~bootswatch/dist/minty/bootswatch";
 
-*{
+.element{
+    width:60%;
     margin-left: 30px;
-    margin-right: 30px;
-}
-legend{
-    padding-top: 70px;
 }
 
-.formFields{
-    margin-top:5px;
-    margin-bottom: 5px;
-    max-width: 600px;
-    height:70px;
+#header{
+    width:60%;
+    margin-top: 100px;
+    margin-left:30px;
+    margin-bottom: 20px;
 }
 
-.nestedFormFields{
-    margin-top:5px;
-    margin-bottom: 5px;
-    max-width: 600px;
+#submit{
+    margin:30px;
+    margin-bottom: 0;
 }
 
 #accountImg{
