--- a/angular/src/app/formvalue/formvalue.component.scss
+++ b/angular/src/app/formvalue/formvalue.component.scss
@@ -2,10 +2,17 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~bootswatch/dist/minty/bootswatch";
 
-.formValues{
-    height:70px;
-}
-
 .form-group{
     width:100%;
+    max-width: 700px !important;
+}
+
+#nestedBox{
+    width: 100%;
+    margin:0px;
+    max-width: 700px !important;
+}
+
+label{
+    margin-top:10px;
 }
